Fix overflow styles bug in select category page

--- a/app/assets/stylesheets/select.sass
+++ b/app/assets/stylesheets/select.sass
@@ -5,6 +5,9 @@
   width: 135px
   margin: 10px 5px
 
+  &:nth-child(7)
+    clear: left
+
 .select_collection, .collection_image_div
   margin-top: 40px
 
